clang/test/BSC/Negative/Method/Struct/struct_instance_function_not_found/struct_instance_function_not_found.cbs
// RUN: %clang_cc1 -verify %s

struct Foo {
  int a;
};

int struct Foo::getA(struct Foo* this) {
  return this->a;
}


int main() {
  struct Foo foo = {.a = 1};
  foo.getB(); // expected-error {{no member named 'getB' in 'struct Foo'}}
  return 0;
}